fixed spacing errors

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav li:last-child {
 
 /* aside section */
 aside {
-  margin-top: -0.7em;
+  margin-top: 0.3em;
   height: 200px;
 }
 
